# httpx_ratelimiter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  pyproject.toml  requirements.txt
httpx_ratelimiter/: __init__.py  httpx_ratelimiter.py
