[project]
requires-python = ">3.7"
name = "httpx_ratelimiter"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
keywords = ["httpx", "rate-limiting", "leaky-bucket"]
authors = [{ name = "Anatoly Raev", email = "cralixraev@gmail.com" }]
dependencies = [
    "httpx",
    "pyrate-limiter~=2.8.0"
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/CralixRaev/httpx_ratelimiter"

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.black]
target-versions = ["py311"]

[tool.ruff]
select = ["E", "F", "RUF", "PERF", "TRY", "PL", "PTH", "ARG", "SIM", "PIE", "C4",
    "B", "S", "UP", "C90", "A", "T20", "FURB"]
preview = true

target-version = "py311"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
